# graphify-enterprise

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-provenance.yml  security.yml
docs/: ENTERPRISE_ROLLOUT.md
docs/translations/: README.ar-SA.md  README.cs-CZ.md  README.da-DK.md  README.de-DE.md  README.el-GR.md  README.es-ES.md  README.fi-FI.md  README.fr-FR.md  README.hi-IN.md  README.hu-HU.md  README.id-ID.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.nl-NL.md  README.no-NO.md  README.pl-PL.md  README.pt-BR.md  README.ro-RO.md  README.ru-RU.md  README.sv-SE.md  README.th-TH.md  README.tr-TR.md  README.uk-UA.md  README.vi-VN.md  README.zh-CN.md  README.zh-TW.md
graphify/: __main__.py  build.py  cache.py  detect.py  export.py  extract.py  ingest.py  llm.py  report.py  security.py  skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md  transcribe.py  watch.py
scripts/: security-scan.sh
tests/: test_build.py  test_confidence.py  test_export.py  test_extract.py  test_hypergraph.py  test_llm.py  test_pipeline.py  test_report.py  test_security.py  test_semantic_similarity.py
tests/fixtures/: extraction.json
worked/example/: README.md
worked/httpx/: GRAPH_REPORT.md  review.md
worked/karpathy-repos/: GRAPH_REPORT.md
worked/mixed-corpus/: GRAPH_REPORT.md  review.md
worked/mixed-corpus/raw/: build.py
